<resources>
    <string name="app_name">HMIN205</string>
    <string name="liste_rendu">Liste des rendus</string>
    <string name="rendu_01_02_2021">Rendu 01/02/2021</string>
    <string name="text_vers_td">Vers TD 1</string>
    <string name="text_vers_tp">Vers TP 1</string>
    <string name="td1_exercice2">Ma première application Android</string>
    <string name="nom_tp1_4">Nom</string>
    <string name="prenom_tp1_4">Prénom</string>
    <string name="ddn_tp1_4">Date de naissance</string>
    <string name="ddc_tp1_4">Domaine de compétence</string>
    <string name="tel_tp1_4">Téléphone</string>
    <string name="send_tp1_4">Envoyer</string>
    <string name="switch_langage">Changer en Anglais</string>
    <string name="envoie">Infos envoyées</string>
    <string name="rendu_08_02_2021">Rendu 08/02/2021</string>
    <string name="rendu_08_03_2021">Rendu 08/03/2021</string>
    <string name="hint_age">Votre âge</string>
    <string name="hint_nom">Votre nom</string>
    <string name="hint_prenom">Votre prenom</string>
    <string name="hint_telephone">Votre telephone</string>
    <string name="hint_mdp">Votre mot de passe</string>
</resources>