<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="20dp"
        android:textSize="40sp"
        android:text="@string/liste_rendu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/rendu_01_02_2021"
            android:textAlignment="center"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/rendu_btn_td_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_vers_td" />

            <Button
                android:id="@+id/rendu_btn_tp_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_vers_tp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>