<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".homepage_tp3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/champnom_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/champ_nom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nom"
                android:inputType="textPersonName"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="7"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/champprenom_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/champ_prenom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_prenom"
                android:inputType="textPersonName"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="7"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/champage_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/champ_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_age"
                android:inputType="number"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="7"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/champtelephone_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/champ_telephone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_telephone"
                android:inputType="phone"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="9"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/champmdp_text_input_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/champ_mot_de_passe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hint_mdp"
                android:inputType="textPassword"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:ems="10"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Envoie" />

        <Button
            android:id="@+id/button_planning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Affiche planning" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>